unpackaged/main/default/objects/Support_SLA__c/Support_SLA__c.object-meta.xml
<CustomObject>
    <label>Support SLA</label>
    <nameField>
        <label>Support SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>