unpackaged/main/default/objects/Support_SLA__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support SLAs</relationshipLabel>
    <relationshipName>Support_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>