unpackaged/main/default/objects/Support_SLA__c/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <defaultValue>&quot;M-F&quot;</defaultValue>
    <label>Business Days</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Business_Days</valueSetName>
    </valueSet>
</CustomField>