unpackaged/main/default/objects/Support_SLA__c/fields/Case_Routing_Method__c.field-meta.xml
<CustomField>
    <fullName>Case_Routing_Method__c</fullName>
    <defaultValue>&quot;Pool&quot;</defaultValue>
    <label>Case Routing Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Support_Case_Routing_Methods</valueSetName>
    </valueSet>
</CustomField>