unpackaged/main/default/objects/Support_SLA__c/fields/Entitlement_Process_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Process_Master_ID__c</fullName>
    <label>Entitlement Process Master ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>