unpackaged/main/default/objects/Support_SLA__c/fields/P2_First_Response__c.field-meta.xml
<CustomField>
    <fullName>P2_First_Response__c</fullName>
    <label>P2: First Response</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Response_Times</valueSetName>
    </valueSet>
</CustomField>