unpackaged/main/default/objects/Support_SLA__c/fields/P3_Next_Response__c.field-meta.xml
<CustomField>
    <fullName>P3_Next_Response__c</fullName>
    <label>P3: Next Response</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Response_Times</valueSetName>
    </valueSet>
</CustomField>