unpackaged/main/default/objects/Support_SLA__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <label>Plan Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plan_Names</valueSetName>
    </valueSet>
</CustomField>