unpackaged/main/default/objects/Support_SLA__c/validationRules/Account_only_custom.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_only_custom</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Tier__c,&quot;Custom&quot;)) &amp;&amp; NOT(ISBLANK(Account__c))</errorConditionFormula>
    <errorMessage>Account cannot be assigned to standard tier SLA</errorMessage>
</ValidationRule>