unpackaged/main/default/objects/Support_SLA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Tier__c</columns>
    <columns>Priority_Index__c</columns>
    <columns>Region__c</columns>
    <columns>Entitlement_Process_Master_ID__c</columns>
    <columns>Business_Hours__c</columns>
    <columns>Business_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>